sua txtname va txtpassw

--- a/JavaApplication1/src/javaapplication1/Login.form
+++ b/JavaApplication1/src/javaapplication1/Login.form
@@ -26,8 +26,8 @@
           <Group type="102" alignment="0" attributes="0">
               <EmptySpace min="-2" pref="36" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="0" attributes="0">
-                  <Component id="jLabel1" alignment="0" min="-2" max="-2" attributes="0"/>
-                  <Component id="lblpass" alignment="0" min="-2" max="-2" attributes="0"/>
+                  <Component id="txtusername" alignment="0" min="-2" max="-2" attributes="0"/>
+                  <Component id="txtpassw" alignment="0" min="-2" max="-2" attributes="0"/>
               </Group>
               <EmptySpace min="-2" pref="39" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="0" max="-2" attributes="0">
@@ -43,28 +43,28 @@
           <Group type="102" alignment="0" attributes="0">
               <EmptySpace min="-2" pref="24" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="3" attributes="0">
-                  <Component id="jLabel1" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Component id="txtusername" alignment="3" min="-2" max="-2" attributes="0"/>
                   <Component id="txtuser" alignment="3" min="-2" max="-2" attributes="0"/>
               </Group>
-              <EmptySpace type="separate" max="-2" attributes="0"/>
-              <Group type="103" groupAlignment="3" attributes="0">
-                  <Component id="lblpass" alignment="3" min="-2" max="-2" attributes="0"/>
-                  <Component id="txtpass" alignment="3" min="-2" max="-2" attributes="0"/>
+              <EmptySpace type="unrelated" max="-2" attributes="0"/>
+              <Group type="103" groupAlignment="0" attributes="0">
+                  <Component id="txtpass" min="-2" max="-2" attributes="0"/>
+                  <Component id="txtpassw" alignment="0" min="-2" max="-2" attributes="0"/>
               </Group>
-              <EmptySpace pref="218" max="32767" attributes="0"/>
+              <EmptySpace pref="225" max="32767" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
   </Layout>
   <SubComponents>
-    <Component class="javax.swing.JLabel" name="jLabel1">
+    <Component class="javax.swing.JLabel" name="txtusername">
       <Properties>
         <Property name="text" type="java.lang.String" value="username"/>
       </Properties>
     </Component>
     <Component class="javax.swing.JTextField" name="txtuser">
     </Component>
-    <Component class="javax.swing.JLabel" name="lblpass">
+    <Component class="javax.swing.JLabel" name="txtpassw">
       <Properties>
         <Property name="text" type="java.lang.String" value="password"/>
       </Properties>
